--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=challenge
+
+# Puerto del servidor
+server.port=9090
+
+# Propiedad custom para la API de películas
+app.moviesApiBaseUrl=http://localhost
+
+# Swagger / OpenAPI
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# R2DBC H2 en memoria
+spring.r2dbc.url=r2dbc:h2:mem:///moviesdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+spring.r2dbc.username=sa
+spring.r2dbc.password=
+
+app.db.schema=classpath:db/schema.sql
+
+# Fuerza que Netty no use el DNS nativo en macOS
+io.netty.resolver.dns.macos.native=false
+
+spring.profiles.active=dev
