--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=challenge
 # Puerto del servidor
 server.port=9090
 
-# Propiedad custom para la API de películas
-app.moviesApiBaseUrl=http://localhost
+# Base URL de la API externa
+app.moviesApiBaseUrl=https://challenge.iugolabs.com
 
 # Swagger / OpenAPI
 springdoc.api-docs.enabled=true
