--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Propiedades para entorno de desarrollo
-app.moviesApiBaseUrl=http://localhost
+app.moviesApiBaseUrl=https://challenge.iugolabs.com
 
 # Ejemplo: logging más verboso
 logging.level.root=DEBUG
