--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-# Propiedades para entorno de producción
-app.moviesApiBaseUrl=localhost
+# Propiedades para entorno de producciï¿½n
+app.moviesApiBaseUrl=https://challenge.iugolabs.com
 
-# Logging más restringido
+# Logging mï¿½s restringido
 logging.level.root=INFO
